# DAA_Lab

./: CMakeLists.txt
Lab_01/: a.out  array_sum.c  duplicate_elements.c  duplicate_elements.cpp  duplicate_elements.js  hashing_using_array.cpp  rotate_right.c  second_smallest.c
Lab_02/: 2.1.c
Lab_03/: 3.1.c  a.out
Lab_04/: 4.1.cpp  a.out  name_sorting.c  quick_sort.cpp
Lab_05/: heap_sort.cpp
