cmake_minimum_required(VERSION 3.28)
project(DAA)
set(CMAKE_C_STANDARD 11)

add_executable(duplicate_elements Lab_01/duplicate_elements.cpp)
add_executable(hashing_using_array Lab_01/hashing_using_array.cpp)
add_executable(rotate_right Lab_01/rotate_right.c)
add_executable(second_smallest Lab_01/second_smallest.c)
add_executable(array_sum Lab_01/array_sum.c)
add_executable(3.1 Lab_03/3.1.c)
add_executable(4.1 Lab_04/4.1.cpp)
add_executable(name_sorting Lab_04/name_sorting.c)

